@@ -4,23 +4,25 @@ Hash: SHA256
 AUX monkeyd.confd 288 SHA256 ba8e0113f3d90f4c5681fb9c76ab523b56ffa409f8b388db9f83e54bd1700eee SHA512 0ed5e3e7f86564d157d833f980e715ebbc0017530f967b21581a1df8c0990a15ff8af538f664c03da3b10affa02773ad78e4dcd03a3d3f670d7661ecaf0ca00f WHIRLPOOL 1f736bab1f63324c0020d2d236bb84bf253978d76db8087ff0d71849bece6ae7531dfa6ab250e2f136301ef265f35061d059eb45536fc1b8220c9fbd78b83ef2
 AUX monkeyd.initd 716 SHA256 3e1c3d1fcf12bde4847f86c06eaf82c1230af8c56040d56f25d22a6fbbae285d SHA512 9f5ac51a06c0255d5d2b09c19228c849c5314f8f9d4ef2dbc837028620462897dd81b504cbf53bd36bd4896e72fcc17b2b0043e038de7bd3d39aa1be26dc8126 WHIRLPOOL e3d4788d4b78a7e1b8482581547350e1dc989ca561484283533d696eea3419f89643fe45610c6e793a3e2c26a1ef7e6ef24cba9fba99f8e06a4cfcbe25cc57c6
 DIST monkey-1.2.2.tar.gz 428467 SHA256 fe52c95436af8901399656e7764a207fbe64b5ca4941e458d48ceaff49c08633 SHA512 b76e90d33db119e881cb3c3adad2cae34a59c3f42283945912e6f3bdff97dc4e82bec663218fc925c16d4e1c3ef50a8c00d3a37da9d0e7e042ec3bbf88f58cf3 WHIRLPOOL 5b13419505be1a09d63e3d54ef17f1bdd8c2eba6ec1cf59c4f9b20c82ca661fcbeb50d2454913de03dce225de90bedd0bf4ba3ebe3d477dd8af481542928baf0
+DIST monkey-1.3.0.tar.gz 329808 SHA256 bfc35e2a070cd8554d6f4155e44e28ec78079f0029e66a63b41db92b5a67e116 SHA512 c45853eed1f7a46fbb38c4ae5fd27f06ebd7a662e5cbc9de73f4cb13f91ca3f4e6471f35499c097d649404ec8bad81a8a8bdcb4faa50e933fa64b496e2265057 WHIRLPOOL ce5d91349304891d1bfa8a7c8691d6ebb837f51b92ff9399a26bc6dc4a9aa3c9c6d730365e7f999997ceb6fbeeb41f009ed6b445a0e65d82bfbdea68a0cbcc06
 EBUILD monkeyd-1.2.2.ebuild 4305 SHA256 1cc45979d5d67d1af4ee4eb99acbbc8bd8d14899234db22586361ea4b71fd297 SHA512 2081bea6107ae0cd61e8915a0f0eadcfaf430fbdd97a535c46f44661b27dcbdcd78df030b066989003ba6758761edfc66c5051becc176d1e02b91db0ee7b97c8 WHIRLPOOL c43455b63f4801c08275dae815cb056341e9aa1295f2799fc7a6b58fb018260dd0e6fe25bceed993e3e5efe204306a368d09db215a7bc9bf64ceb6a598316dee
-MISC ChangeLog 10688 SHA256 864c5638e0007a411540e3229990f2de391c33beaa03cc45b1ecf9bff1e0536a SHA512 0ee68039de66cc16306fb79c6bf00b7d4d9e1ce5bfcaad9ed53d16f027c4ba43162bd241f346f1001e512dcc32f9ecdbc0e238499f02c948aa5db91aeb2c718a WHIRLPOOL 7757772aa4de676dec22913d06ad26c57d7ab0503561baa7eb2443853e06c3a4fa934e369eaf9bb838ed597fff8a51ed75c38c3eaaa6b669e526040d66d1466f
+EBUILD monkeyd-1.3.0.ebuild 4310 SHA256 bb97bad298ffc8c4caa498d289829e1c17b6d2fec70c83a09c74046538380056 SHA512 a30097f9e5d14e8a203c8a4a8cec1988a5b6734bd65ff34a2e5a1312bdf1540427a13e31e435a47da89bde7f8adf4669a13fa213fa39bbcc1fa021bfbde08e37 WHIRLPOOL 54ff2a21f9a6383bbd2b3fc7aaf9bc8b3a4c3d8339b765fc5821c3200e2a6bf60e74b83d2cd105396a68494fb45caaf9ba90b56b64cf2ec3f1d04c1a2d8cd0b4
+MISC ChangeLog 10812 SHA256 303b2ad5698cda919222a701e4786c98addd7ce6866d46b99d9c9becc04d6440 SHA512 1b0afef16b9424a73e31b97f85e269054b5fe1dd8f2a195d7e206ae834b638d6b0521296d618259d76f0c7e7ee9d8077f3ba3724239a78820f7a52af6f1e3c56 WHIRLPOOL 8e64e1912d16de6ed858875cba1cded3faf223c606439e80e73b72b3f2b7fcd21ea71b1e98a1ef94f13d83eff51d77f5bd6f128300d577304f397cfd2b369e86
 MISC metadata.xml 385 SHA256 88901f1e630c8bb995da2ece6f50de69a82b845f63e51742c6f90b26f31c5321 SHA512 863daa33d3ce733a5b84927dba2f0bb28f24802b27f0b2ef225b4c5e8251977f8500ea015f0f21febda32cc7933c95daf9add6fe9563cce979ecf8096babb242 WHIRLPOOL b61c7a2b8e851a98662ebbc76cfb826a0980c6c9654f119d152f226add3cce42b8ed2e2d354e6c994b9e10badd3521b611d133bdc0983a00c75e920717959269
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSP+ihAAoJEJOE+m71LUu6XVYQAI6ckhmA4tfrQRGrN1qleYlk
-eev9NFtqCxmPNa44wj/RCdlNd1a8eeUUO0YG0vbM3HxHzO7ixwcara3HC2eVC0xn
-ouVVZ0bxVmfXs+RBMIBcWoszHOzXq4ep25OakFXSb+7/LhusvypSB/aZomEUfdJq
-HWeqWoIF4Av/0YMP+e5/ibQPw+29otBMwqBjSC3Yx559aR4/0AUT2dr39xFhyT1u
-InMqB+Yve6eCzluy+gcMPOMfpqSvU78w1IUu3yytLCgSXuHomDf5zZBms8O83eWV
-lo7gQofIcbIguIY4vbA85Hip6DrLiIJOcZGCOmfnIEpQapz6mOuecWSNBlMoCLb+
-sKTUUhRYscfo1ZgfOyLTHzR84FSMI2hhCNikUf87g2mgIlu+p4H0N7vVYgdsB41n
-9KmrBY27s39LvuLI4nrTB4/aNGAmqJ7PVbQQl0UmI5fdAqOprvqZRZXZUUMpkWrR
-2h/JFmdh1pOVDxNl9DxhsIxUIpX1ShWJz98qm1GuObZK4SrIz8+A8PvukUUEm/sw
-u4vKe5K2Or2lWVCkaXkmEciSitEL11QHVX0VOtlFeLxD5qoOeaJyfGcZetNt+CQs
-+O3rEYuZWoSYU5NiPDVhJPN1qd76jo3pVgWJjW2k0xpk+XibrFiUUswii9LvXza1
-Jdro+Looxq4ya0Id9Ls0
-=zprw
+iQIcBAEBCAAGBQJSXzBEAAoJEJOE+m71LUu6LD4QAJZQyWL/7a+dxGerzlb6/zzX
+Z9/HEwkWSKyjeh3EUmNZHk+Hj8U6czxtDXCbvztrbakG4sgSzevb1aKNeH8i92C7
+rosNRpN7DwEaeKiPj0pLiNtoKnm7H1zrPmOU0qe8qGFF4pHyrd8IKEDe0v1Ax/Ax
+geBG3tEIcvtuNoikmzsvx0opeb+cU5d6rR+RJd9gbNTC1ZWtkuU9ZppXEOny3kaj
+zLODEVyrTuKrJegtC7GGQKcyMC5bY9zikcfp54OBJd/1tRHOgUssIeIFPvXDsW69
+Lu8NINsy7w1NbvLLmL5yXg2s0wujFDBCKeuhaEl17bWe5TzSQxHmk+bZsgAz21NQ
+Fed47pv/5DZ5FRxIWw8d+/uhl11i0REN34fp9jchqTNM9eJbCcLvVgzi0EINsBb8
+s9KndCwL3y+GK9Dl9Ejlh9R/G5gpBmbRqPSvcbm02m4lepK4qs9Q8NNyozgfqnzh
+A9KFjI4NOGN8h1G1B0rnbzhMlT8Ys+OfFLaRl8Fi+uII/OPzmgXpvKfvJwlE7F22
+QKtdyJDpkmYQ4/eTBOZFlxpWIGWMQtj5Ixj62hRT+hDPXUl6kmgllltHo9XaTS1r
+mJrGq8a4LVvBgBd1oJYmtQ/E7j5cjuwMy8ooRvELRFwmUrnDwCZLLvkMDnAzv0fS
+I2EGNxfBIdksWMdGjtrX
+=VbFM
 -----END PGP SIGNATURE-----
