@@ -1,6 +1,11 @@
 # ChangeLog for www-servers/monkeyd
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/monkeyd/ChangeLog,v 1.65 2013/09/23 07:06:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/monkeyd/ChangeLog,v 1.66 2013/10/17 00:31:13 blueness Exp $
+
+*monkeyd-1.3.0 (17 Oct 2013)
+
+  17 Oct 2013; Anthony G. Basile <blueness@gentoo.org> +monkeyd-1.3.0.ebuild:
+  Version bump
 
   23 Sep 2013; Anthony G. Basile <blueness@gentoo.org> -monkeyd-1.1.1.ebuild,
   -monkeyd-1.2.1.ebuild, monkeyd-1.2.2.ebuild:
